fix: vetical quap questionnaire answer aligment and overflow in permission dialog

--- a/src/app/apps/quap/components/evaluation-view/evaluation-view.component.scss
+++ b/src/app/apps/quap/components/evaluation-view/evaluation-view.component.scss
@@ -29,7 +29,7 @@
         font-size: 12px;
         white-space: nowrap;
 
-        margin: 1px 0;
+        padding: 2px 0;
       }
     }
   }
